--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,240 +2,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug uniir vg Eval",
+            "name": "Pretrain Qwen2VL with DeepSpeed",
             "type": "debugpy",
             "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/eval_vg_instruct.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "uniir",
-                "nil",
-                "nil2"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "7",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug DeepSpeed LLava",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:DEEPSPEED}",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "--include",
-                "localhost:6,7",
-                "--master_port",
-                "44035",
-                "${env:VLLM_REPO}/llava/llava_train.py",
-                "${env:VLLM_REPO}/config/backbone_ablation/LLavaNext-Backbone.json"
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug MagicLens vg Eval",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/eval_vg_instruct.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "magiclens",
-                "nil",
-                "nil2"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "7",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug VLM2VEC vg Eval",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/eval_vg_instruct.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "vlm2vec",
-                "nil",
-                "nil2"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "7",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug vg Eval2",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/eval_vg_instruct.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "abcQwenVL-Instruct",
-                "/home/b3schnei/output/QwenVL-8B-Large-Batch/checkpoint-2000",
-                "/home/b3schnei/output/QwenVL-8B-Instruct-Large/checkpoint-100"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "3",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug vg Eval",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/eval_vg_instruct.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "abcQwenVL-Instruct",
-                "/home/b3schnei/output/QwenVL-8B-Large-Batch",
-                "/home/b3schnei/output/QwenVL-8B-VG-Instruct"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "3",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug MMeb VQA Eval",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/mmeb_vqa.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "abcQwenVL-Instruct",
-                "/home/b3schnei/output/QwenVL-8B-Large-Batch/checkpoint-2000",
-                "/home/b3schnei/output/QwenVL-8B-Instruct-Large/checkpoint-100"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "0",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug MMeb Eval",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/mmeb_classification.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "abcQwenVL",
-                "/home/b3schnei/output/QwenVL-8B-Large-Batch/checkpoint-2000"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "0",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Parse 4o",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/finetune/parse_4o.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "/home/b3schnei/data.json",
-                "/home/b3schnei/parsed_data.json",
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-            }
-        },
-        {
-            "name": "Debug Eval Imagenet",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/eval_imagenet.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "abcQwenVL",
-                "/home/b3schnei/output/QwenVL-8B-Large-Batch"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "0",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Eval Flickr",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/eval_flickr30k.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "abcQwenVL",
-                "/home/b3schnei/output/QwenVL-8B-Large-Batch/checkpoint-3000"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "0,1,2",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Eval MSCOCO",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/evaluate/eval_mscoco.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "abcQwenVL",
-                "/home/b3schnei/output/QwenVL-8B-BS-256/checkpoint-5000"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "4",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Finetune Data",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/finetune/finetuning_data.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "~/keys.json",
-                "32",
-                "0",
-                "100"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "0,1,2",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug DeepSpeed Qwen",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:DEEPSPEED}",
+            "program": "/scratch/b3schnei/anaconda3/envs/abc/bin/deepspeed",
             "justMyCode": false,
             "console": "integratedTerminal",
             "args": [
@@ -243,176 +13,12 @@
                 "localhost:0,1,2,3",
                 "--master_port",
                 "44000",
-                "${env:VLLM_REPO}/qwen/qwen_train.py",
-                "${env:VLLM_REPO}/config/qwen/QwenVL-8B-VG2-Instruct.json"
+                "./qwen/qwen_train.py",
+                "./config/qwen/QwenVL-8B-Large-Batch.json"
             ],
             "env": {
                 "PYTHONPATH": "${env:VLLM_REPO}",
                 "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Qwen",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/qwen/qwen_train.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "${env:VLLM_REPO}/config/qwen/QwenVL-8B.json"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "0,1,2",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug DeepSpeed",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:DEEPSPEED}",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "--include",
-                "localhost:0,1",
-                "--master_port",
-                "44000",
-                "${env:VLLM_REPO}/internvl/train/internvl_chat_finetune.py",
-                "${env:VLLM_REPO}/config/debug_instruct.json"
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug InternVL2-8B",
-            "type": "debugpy",
-            "request": "launch",
-            "cwd": "${env:VLLM_REPO}",
-            "program": "${env:DEEPSPEED}",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "--include",
-                "localhost:0,1",
-                "--master_port",
-                "44000",
-                "${env:VLLM_REPO}/internvl/train/internvl_chat_finetune.py",
-                "${env:VLLM_REPO}/config/InternVL-8B-Low-Memory.json"
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Neg Mining",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/visualization/neg_mine.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "${env:HOME}/output/embed/internvl_embedding_model",
-                "5"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "0",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Visualization",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/visualization/visualize_topk.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "/home/b3schnei/output/embed/internvl_embedding_model",
-                "0",
-                "10"
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "1",
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Embed",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:DEEPSPEED}",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "--include",
-                "localhost:7",
-                "--master_port",
-                "44000",
-                "${env:VLLM_REPO}/visualization/embed.py",
-                "${env:VLLM_REPO}/config/embed/InternVL-1B-Optimized-Temperature.json",
-                "10"
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug Negative idx",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/pretrain/create_negative_index.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "${env:VLLM_REPO}/config/InternVL-8B-Pretrain.json",
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline"
-            }
-        },
-        {
-            "name": "Debug vLLM",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/finetune/generate_finetuning_data.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "0",
-                "20",
-                "10",
-                "~/wiki_instruct"
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline",
-                "CUDA_VISIBLE_DEVICES": "0,1,2,3"
-            }
-        },
-        {
-            "name": "Debug Embed_",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${env:VLLM_REPO}/visualization/embed_.py",
-            "justMyCode": false,
-            "console": "integratedTerminal",
-            "args": [
-                "${env:VLLM_REPO}/config/embed/InternVL-8B-Pretrain.json",
-                "10"
-            ],
-            "env": {
-                "PYTHONPATH": "${env:VLLM_REPO}",
-                "WANDB_MODE": "offline",
-                "CUDA_VISIBLE_DEVICES": "5"
             }
         }
     ]
