Test the env vars are working in launch again

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,12 @@
             "name": "Pretrain Qwen2VL with DeepSpeed",
             "type": "debugpy",
             "request": "launch",
-            "program": "/scratch/b3schnei/anaconda3/envs/abc/bin/deepspeed",
+            "program": "${env:DEEPSPEED}",
             "justMyCode": false,
             "console": "integratedTerminal",
             "args": [
                 "--include",
-                "localhost:0,1,2,3",
+                "localhost:2,3",
                 "--master_port",
                 "44000",
                 "./qwen/qwen_train.py",
